--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
     "vite": "^5.4.9",
     "vitest": "^2.1.4",
     "vitest-browser-react": "^0.0.3"
+  },
+  "msw": {
+    "workerDirectory": [
+      "tests",
+      "public"
+    ]
   }
 }
