--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,10 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
+      - name: Lint
+        run: npm run lint
+      - name: Integration Test
+        run: npm run test
       - name: Build
         env:
           VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}
