--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint:watch": "esw --watch .",
+    "lint:fix": "eslint . --fix",
     "test": "vitest",
     "preview": "vite preview"
   },
@@ -20,23 +22,28 @@
     "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
+    "vite": "^5.4.9",
+    "@vitejs/plugin-react": "^4.3.3",
+    "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
     "@vitest/browser": "^2.1.0",
-    "eslint": "^9.13.0",
+    "eslint": "^9.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
+    "eslint-watch": "^8.0.0",
     "globals": "^15.11.0",
     "msw": "^2.6.0",
     "playwright": "^1.44.1",
     "sass-embedded": "^1.80.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9",
     "vitest": "^2.1.4",
     "vitest-browser-react": "^0.0.3"
   },
