--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:test": "vite --mode test",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "lint:watch": "esw --watch .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest",
+    "test": "vitest run",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,13 +22,15 @@
     "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
-    "vite": "^5.4.9",
-    "@vitejs/plugin-react": "^4.3.3",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.13.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/node": "^22.8.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@vitest/browser": "^2.1.0",
+    "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -37,20 +39,19 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
-    "eslint-watch": "^8.0.0",
     "globals": "^15.11.0",
+    "jsdom": "^25.0.1",
     "msw": "^2.6.0",
-    "playwright": "^1.39.0",
     "sass-embedded": "^1.80.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vitest": "^2.1.4",
-    "vitest-browser-react": "^0.0.3"
+    "vite": "^5.4.9",
+    "vitest": "^2.1.4"
   },
   "msw": {
     "workerDirectory": [
-      "tests",
-      "public"
-    ]
+      "./public"
+    ],
+    "homepage": "/crypto-coin"
   }
 }
