update mode to test

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest run",
+    "test": "vitest run --mode test",
     "preview": "vite preview"
   },
   "dependencies": {
