--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.59.16",
-    "@tanstack/react-query-devtools": "^5.59.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-loading-skeleton": "^3.5.0"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
